--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "dev": "nodemon server.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
-
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.2.0"
+    "mongoose": "^9.2.0",
+    "nodemailer": "^8.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
