--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.0",
-    "nodemailer": "^8.0.1"
+    "nodemailer": "^8.0.1",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
