--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://dhruvrastogi2020_db_user:9M5160b6bpKksur8@dhruv.acrto5j.mongodb.net/Hostalas?appName=Dhruv
 PORT=3000
+EMAIL_ID=dhruvrastogi2020@gmail.com
+PASSKEY=xnulbrvaelnbacbj
